--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1{
     border-color: #C8CED3;
 
 }
-/* inizio prima sezione */
+/* inizio sezioni */
 section{
     background-color: white;
     padding-left: 30px;
@@ -57,3 +57,4 @@ padding: 0px;
 li{
     padding-bottom: 20px;
 }
+/* inizio decorazione */
